--- a/public/css/index.css
+++ b/public/css/index.css
@@ -166,6 +166,18 @@ blockquote h3:after {
     padding: 5px;
 }
 
+.image-gallery-2{
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+align-items: center;
+}
+
+.image-gallery-2 img{
+   height:60px;
+   width:60px;
+}
+
 /* SECTION Pages */
 
 .section{
