Data displayed for  scholarship portals

--- a/templates/views/scholarships.hbs
+++ b/templates/views/scholarships.hbs
@@ -111,7 +111,7 @@
 
 
             <div class="linkedinContainer">
-                <h1 class="section-subtitles"> Linkedin Internships </h1>
+                <h1 class="section-subtitles"> National Gov Scholarships </h1>
 
                 {{!-- {{#each linkedinData}}
 
@@ -131,7 +131,7 @@
             </div>
 
             <div class="topMNCsContainer">
-                <h1 class="section-subtitles"> Top Companies Internships </h1>
+                <h1 class="section-subtitles"> Top Companies Scholarships </h1>
 
             </div>
 
