--- a/templates/views/login2.hbs
+++ b/templates/views/login2.hbs
@@ -10,10 +10,18 @@
 <body>
   {{>header}}
 
+  {{!-- Registration section spanning an entire page --}}
+
   <div class="section-reg">
+
+    {{!-- Leftmost image section --}}
 
     <div class="reg-img-left">
       <div class="gradient-overlay">
+
+        
+          <img src="/img/logos/logo-white.png" height="20%" width="25%" alt="CareerPilot Logo">
+    
 
         <h2> When Dreams Take Flight <br> Start Your Career As A Skilled Pilot </h2>
         <h1> WELCOME BACK! </h1>
@@ -22,6 +30,30 @@
          {{!-- <h1> Start Your Career As A Skilled Pilot </h1> --}}
          <button class="btn"> <a href="/loginPage"> Sign In </a> </button>
       </div>
+    </div>
+
+    {{!-- Rightmost Login Section --}}
+
+    <div class="reg-img-right">
+      <form class="form-control">
+
+        <h1> Create Account </h1>
+
+        <div  class="login-options">
+          <div class="login-icons">
+            <img src="">
+          </div>
+
+            <div class="login-icons">
+            <img src="">
+          </div>
+
+            <div class="login-icons">
+            <img src="">
+          </div>
+
+        </div>
+      </form>
     </div>
 
   </div>
