--- a/templates/views/login2.hbs
+++ b/templates/views/login2.hbs
@@ -19,44 +19,74 @@
     <div class="reg-img-left">
       <div class="gradient-overlay">
 
-        
-          <img src="/img/logos/logo-white.png" height="20%" width="25%" alt="CareerPilot Logo">
-    
+
+        <img src="/img/logos/logo-white.png" height="20%" width="25%" alt="CareerPilot Logo">
+
 
         <h2> When Dreams Take Flight <br> Start Your Career As A Skilled Pilot </h2>
         <h1> WELCOME BACK! </h1>
 
         <h2> To be connected with us, Please Login with your personal information </h2>
-         {{!-- <h1> Start Your Career As A Skilled Pilot </h1> --}}
-         <button class="btn"> <a href="/loginPage"> Sign In </a> </button>
+        {{!-- <h1> Start Your Career As A Skilled Pilot </h1> --}}
+        <button class="btn"> <a href="/loginPage"> Sign In </a> </button>
       </div>
     </div>
 
     {{!-- Rightmost Login Section --}}
 
     <div class="reg-img-right">
-      <form class="form-control">
 
-        <h1> Create Account </h1>
+      <h1 class="index-para"> Create Account </h1>
 
-        <div  class="login-options">
-          <div class="login-icons">
-            <img src="">
-          </div>
-
-            <div class="login-icons">
-            <img src="">
-          </div>
-
-            <div class="login-icons">
-            <img src="">
-          </div>
-
+      <div class="login-options">
+        <div class="login-icons">
+          <img src="">
         </div>
+
+        <div class="login-icons">
+          <img src="">
+        </div>
+
+        <div class="login-icons">
+          <img src="">
+        </div>
+
+        <h3> Or Sign Up with an Email </h3>
+
+        <form class="form-control">
+          <input type="text" class="scholarshipKeyword" name="fullName" placeholder="Full Name" required><br>
+          <input type="email" class="scholarshipKeyword" name="email" placeholder="Email address" required><br>
+          <input type="password" class="scholarshipKeyword" name="password" placeholder="Password" required><br>
+          <input type="password" class="scholarshipKeyword" name="confirmPassword" placeholder="Confirm Password"
+            required><br>
+          <label class="radio gender">
+
+            <input type="radio" name="gender" value="male" checked>
+            <span> Male </span>
+          </label>
+
+          <label class="radio gender">
+            <input type="radio" name="gender"  value="female">
+            <span> Female </span>
+          </label><br>
+
+          <select class="scholarshipKeyword">
+            <option value="Current Status" disabled="disabled" selected="selected" name="currentStatus" required>Please
+              select your current status </option>
+            <option value="Student">Student</option>
+            <option value="Graduated">Graduated</option>
+          </select><br>
+
+          <button class="btn" type="submit"> Sign Up </button>
+
+
+      </div>
       </form>
     </div>
 
   </div>
+
+  {{>footer}}
 </body>
 
 </html>
