--- a/templates/views/partials/headerMeta.hbs
+++ b/templates/views/partials/headerMeta.hbs
@@ -21,7 +21,7 @@
  {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  --}}
 
  {{!-- Favicon --}}
-<link rel="icon" type="image/x-icon" href="/public/img/icons/logo_symbol.png">
+<link rel="icon" type="image/x-icon" href="/img/favicons/favicon.ico">
 
 {{!-- Google Recaptcha --}}
 {{!-- <script src="https://www.google.com/recaptcha/api.js"></script> --}}
