Clear Button functionality added. Middlewares upgraded. Favicon added.

--- a/templates/views/internships.hbs
+++ b/templates/views/internships.hbs
@@ -27,7 +27,7 @@
                 <input type="text" name="location" placeholder="Enter City">
                 <input type="text" name="internshipSearch" placeholder="For eg : Web Development">
                 <button class="btn" id="searchInternshipBtn" type="submit"> Search Internships </button>
-                <button class="btn"> Clear </button>
+                <button class="btn" onfocus = "this.value='' "> Clear </button>
 
             </form>
         </div>
