--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -22,6 +22,7 @@
      <label for="jobKeyword"> Job Location </label>
     <input type="text" placeholder="Enter Job Location" name="jobLocation" id="jobLocation">
     <button class="btn" type="submit"> Search Jobs </button>
+        <button class="btn" onfocus = "this.value='' "> Clear </button>
     
     <div class="jobFilters">
 
