--- a/templates/views/scholarships.hbs
+++ b/templates/views/scholarships.hbs
@@ -57,7 +57,7 @@
 
                 <input type="text" name="scholarshipKeyword" id="scholarshipKeyword">
                 <button class="btn"> Search</button>
-                <button class="btn"> Clear </button>
+                <button class="btn" onfocus = "this.value='' "> Clear </button>
 
             </form>
 
@@ -141,6 +141,11 @@
     </div>
 
     </div>
+
+    <script>
+
+       
+    </script>
 
     {{>footer}}
 </body>
