--- a/templates/views/courses.hbs
+++ b/templates/views/courses.hbs
@@ -26,7 +26,7 @@
         </select>
 
         <button class="btn" type="submit"> Search </button>
-        <button class="btn" type="submit"> Clear </button>
+        <button class="btn" onfocus = "this.value='' "> Clear </button>
     </form>
 
     <div class="resultContainer">
