--- a/public/css/loginBox.css
+++ b/public/css/loginBox.css
@@ -13,7 +13,7 @@
     background-image: url('/img/regcover.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
-    height:100vh;
+    /* height:100vh; */
     width:40%;
     position: absolute;
     left:0;
@@ -25,7 +25,7 @@
     position: absolute;
     left: 0;
     width: 40%;
-    height: 100vh;
+    /* height: 100vh; */
     background: linear-gradient(to bottom,rgb(52, 152, 219, 0.8), rgb(30, 46, 58, 0.5));
     /* opacity: 70%; */
     display: flex;
