--- a/public/css/loginBox.css
+++ b/public/css/loginBox.css
@@ -1,32 +1,33 @@
-.section-reg{
+.section-reg {
     width: 100%;
     height: 100vh;
 }
 
-.reg-img-left{
-    width:40%;
+.reg-img-left {
+    width: 40%;
 }
-.reg-img-left::before{
+
+.reg-img-left::before {
 
     content: "";
     /* background: linear-gradient(to bottom, #ff0000, #00ff00); */
     background-image: url('/img/regcover.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
-    /* height:100vh; */
-    width:40%;
+    height:100%;
+    width: 40%;
     position: absolute;
-    left:0;
+    left: 0;
     z-index: 1;
-    
+
 }
 
-.gradient-overlay{
+.gradient-overlay {
     position: absolute;
     left: 0;
     width: 40%;
-    /* height: 100vh; */
-    background: linear-gradient(to bottom,rgb(52, 152, 219, 0.8), rgb(30, 46, 58, 0.5));
+    height: 100%;
+    background: linear-gradient(to bottom, rgb(52, 152, 219, 0.8), rgb(30, 46, 58, 0.5));
     /* opacity: 70%; */
     display: flex;
     flex-direction: column;
@@ -37,83 +38,85 @@
 }
 
 
-.reg-img-left h1{
+.reg-img-left h1 {
 
     color: white;
-    font-family: 'karla', Geneva, Tahoma, sans-serif; 
+    font-family: 'karla', Geneva, Tahoma, sans-serif;
     font-size: 2.1rem;
     font-weight: 800;
     text-align: center;
-    width:70%;
+    width: 70%;
 
 }
 
-.reg-img-left h2{
+.reg-img-left h2 {
     color: white;
     font-family: 'karla', Geneva, Tahoma, sans-serif;
     font-size: 1.5rem;
     font-weight: 400;
     text-align: center;
-    width:70%;
+    width: 70%;
 
 }
 
-.logo-container{
+.logo-container {
     display: flex;
     justify-content: center;
     align-items: center;
 
 }
 
-.reg-img-right{
+.reg-img-right {
     width: 55%;
-    float:right;  
+    float: right;
     margin-top: 10%;
     position: relative;
     bottom: 0;
 
 }
 
-.form-control{
+.form-control {
 
     margin-top: 10px;
-  }
-  
-  .form-control input{
+}
+
+.form-control input {
     margin: 10px 10px !important;
     padding: 5px !important;
-  }
+}
 
 /* Media Queries For Responsive Web Design */
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-.reg-img-left::before{
+    .reg-img-left::before {
 
-    width:100%;
-};
+        width: 100%;
+    }
 
-.reg-img-left{
-    width:100%;
-    height: 90%;
-}
+    ;
 
-.gradient-overlay{
+    .reg-img-left {
+        width: 100%;
+        height: 90%;
+    }
 
-    position: absolute;
-    left: 0;
-    top: 20;
-    width:100%;
-}
+    .gradient-overlay {
 
-.reg-img-right{
-    width: 100%; 
-    margin-top: 10%;
-    /* position: relative; */
-    /* bottom: 0; */
-    /* right:0; */
+        position: absolute;
+        left: 0;
+        top: 20;
+        width: 100%;
+    }
 
-}
+    .reg-img-right {
+        width: 100%;
+        margin-top: 10%;
+        /* position: relative; */
+        /* bottom: 0; */
+        /* right:0; */
+
+    }
 
 
 
@@ -125,27 +128,29 @@
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
 
-    .reg-img-left::before{
+    .reg-img-left::before {
 
-        width:100%;
-    };
-    
-    .reg-img-left{
-        width:100%;
+        width: 100%;
+    }
+
+    ;
+
+    .reg-img-left {
+        width: 100%;
         height: 90%;
     }
-    
-    .gradient-overlay{
-    
+
+    .gradient-overlay {
+
         position: absolute;
         left: 0;
-        width:100%;
+        width: 100%;
     }
-    
-    .reg-img-right{
-        width: 100%; 
+
+    .reg-img-right {
+        width: 100%;
         margin-top: 10%;
-    
+
     }
 }
 
@@ -153,6 +158,4 @@
 @media only screen and (min-width: 992px) {}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-
-}
+@media only screen and (min-width: 1200px) {}
