Microsoft Scrapper troubleshooted, Job2 UI Created

--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -89,6 +89,11 @@
 
                 {{/each}}
 
+                {{errorRender.statusCode}}
+                {{errorRender.statusText}}
+                {{errorRender.resStatus}}
+                {{errorRender.resMessage}}
+
         
             </div>
 
