--- a/templates/views/jobs2.hbs
+++ b/templates/views/jobs2.hbs
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {{>headerMeta}}
     <title>Jobs : CareerPilot </title>
 </head>
+
 <body>
     {{>header}}
-    
-    
+
+    <div class="jobs-gradient">
+        <main class="container-jobs">
+
+            <h1> CareerPilot </h1>
+
+            <h3>Career Exploration Made Easy: Jobs, Scholarships, and More </h3>
+
+
+        </main>
+    </div>
+
+
 </body>
+
 </html>
