--- a/templates/views/jobs2.hbs
+++ b/templates/views/jobs2.hbs
@@ -16,8 +16,24 @@
 
             <h3>Career Exploration Made Easy: Jobs, Scholarships, and More </h3>
 
+            <div class="job-search">
+                <input type="text" name="jobKeyword" placeholder="Looking for? ">
+                <input type="text" placeholder="Enter Job Location" name="jobLocation" id="jobLocation">
+                <button class="btn" type="submit"> Search Jobs </button>
+                <button class="btn" onfocus="this.value='' "> Clear </button>
+            </div>
+
 
         </main>
+    </div>
+
+    <div class="section">
+
+        <h1 class="section-titles"> Job Based on field </h1>
+
+        <div class="image-gallery">
+            
+        </div>
     </div>
 
 
