--- a/templates/views/jobs2.hbs
+++ b/templates/views/jobs2.hbs
@@ -29,10 +29,10 @@
 
     <div class="section">
 
-        <h1 class="section-titles"> Job Based on field </h1>
+        <h1 class="heading"> Job Based on field </h1>
 
         <div class="image-gallery">
-            
+
         </div>
     </div>
 
