--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -65,8 +65,8 @@
                     <li><a href="/dashboard">Dashboard Home</a></li>
                     <li><a href="#newsContainerDashboard">News Articles</a></li>
                     <li><a href="#">Internships</a></li>
-                    <li><a href="#">Scholarships</a></li>
-                    <li><a href="#">Jobs</a></li>
+                    <li><a href="/scholarships">Scholarships</a></li>
+                    <li><a href="/jobs">Jobs</a></li>
                     <li><a href="#">Certifications</a></li>
                     <li><a href="#">Hackathons</a></li>
                     <li><a href="#coursesContainerDashboard">Courses</a></li>
@@ -77,10 +77,10 @@
                     <button class="sidebar-btn"> Help </button>
                 </div>
                 <div class="dropdown-content">
-                    <a href="#">Language</a>
-                    <a href="#">Report A Problem</a>
-                    <a href="#">Feedback</a>
-                    <a href="#">Contact Us</a>
+                    <a href="#">Language</a><br>
+                    <a href="#">Report A Problem</a><br>
+                    <a href="#">Feedback</a><br>
+                    <a href="#">Contact Us</a><br>
                 </div>
                 <div class="dropdown">
                     <button class="sidebar-btn"> Settings </button>
