--- a/templates/views/settings.hbs
+++ b/templates/views/settings.hbs
@@ -2,26 +2,29 @@
 <html lang="en">
 <head>
     {{>headerMeta}}
+    <title> Settings : CareerPilot </title>
 
 </head>
 <body>
 
     {{>header}}
 
-    <div class="container">
+    <div class="container dropdown sidebar-nav">
         <h1 class="title"> Settings </h1>
     </div>
+ <div class="dropdown-content">
 
-    <ul>
-        <h1> Account Settings </h1>
-        <li href="/myprofile"> View Profile </li>
-        <li href="/myprofile"> Update Name </li>
-        <li href="/myprofile"> Update Email Address </li>
-        <li href="/myprofile"> Update Password </li>
-        <li href="/myprofile"> Update Interests </li>
-        <li href="/myprofile"> Update Gender </li>
-
-    </ul>
+                    <li><a href="#"> Account Settings </a></li>
+                    <li><a href="/myprofile">View Profile</a></li>
+                    <li><a href="#">Update Name</a></li>
+                    <li><a href="#">Update Email Address</a></li>
+                    <li><a href="#">Update Password</a></li>
+                    <li><a href="#">Update Interests</a></li>
+                    <li><a href="#">Update Gender :/ </a></li>
+                    <li><a href="#coursesContainerDashboard">Courses</a></li>
+                    <li><a href="#">Certifications</a></li>
+                </div>
+  
 
     <ul>
         <h1> Notification Settings </h1>
