Password Reset 50% added, Account settings frontend refined

--- a/templates/views/forgotPassword.hbs
+++ b/templates/views/forgotPassword.hbs
@@ -18,6 +18,27 @@
         <button class="btn" type="submit"> Reset Password </button>
         </form>
     </div>
+
+     {{!-- <div class="section1">
+
+        <form class="form-control" action="/forgotPassword" method="POST">
+
+        <p class="section-subtitles index-para"> OR </p>
+        <p class="section-subtitles index-para"> Enter the answer to your security question </p><br>
+        <p id="securityQuestion"> {{securityQuestion}}</p>
+        
+        <input type="text" name="secAnswer" placeholder="Your Answer ">
+        
+        <button class="btn" type="submit"> Reset Password </button>
+
+        <div class="resultBox">
+
+            <p id="message"> {{message}}</p>
+        </div>
+        </form>
+    </div> --}}
+
+    <p class="index-para"> <a href="/securityQuestion"> No longer have access to these? Click here </a></p>
     
 </body>
 </html>
