--- a/templates/views/settings.hbs
+++ b/templates/views/settings.hbs
@@ -24,7 +24,7 @@
     <li><a href="/myprofile">View Profile</a></li>
     <li><a href="/changeName">Update Name</a></li>
     <li><a href="#">Update Email Address</a></li>
-    <li><a href="#">Update Password</a></li>
+    <li><a href="/forgotPassword">Update Password</a></li>
     <li><a href="#">Update Interests</a></li>
     <li><a href="#">Update Gender :/ </a></li>
     <li><a href="#coursesContainerDashboard">Courses</a></li>
