Name update feature fully implemented, Account settings frontend refined

--- a/templates/views/forgotPassword.hbs
+++ b/templates/views/forgotPassword.hbs
@@ -16,6 +16,7 @@
         <input type="email" name="email" placeholder="Your Email Address">
         
         <button class="btn" type="submit"> Reset Password </button>
+        <button class="btn" onfocus = "this.value='' "> Clear </button>
         </form>
     </div>
 
