--- a/templates/views/resetpassword.hbs
+++ b/templates/views/resetpassword.hbs
@@ -14,8 +14,10 @@
 
     <form action="/resetpassword" method="POST">
     
-    <input type="text" placeholder="Enter a new password">
-    <input type="text" placeholder="Confirm new password">
+    <input type="text" placeholder="Enter a new password"><br>
+    <input type="text" placeholder="Confirm new password"><br>
+    <button class="btn" type="submit"> Change Password </button>
+    <button class="btn" onfocus = "this.value='' "> Clear </button>
     
     </form>
     
