--- a/templates/views/loginPage.hbs
+++ b/templates/views/loginPage.hbs
@@ -8,6 +8,8 @@
 
     <h1> Login </h1>
 
+    {{message}}
+
     <p id="isLoginError"> {{loginErrorIfAny}} </p>
     {{errorMsg}}
     {{!-- {{loginErrorIfAny}} --}}
