--- a/templates/views/scholarships.hbs
+++ b/templates/views/scholarships.hbs
@@ -53,11 +53,11 @@
                 </select>
 
                 <button class="btn" type="submit"> Search </button>
-                <h1 class="index-para section-titles"> Search by Keyword </h2>
+                {{!-- <h1 class="index-para section-titles"> Search by Keyword </h2>
 
                 <input type="text" name="scholarshipKeyword" id="scholarshipKeyword">
                 <button class="btn"> Search</button>
-                <button class="btn" onfocus = "this.value='' "> Clear </button>
+                <button class="btn" onfocus = "this.value='' "> Clear </button> --}}
 
             </form>
 
