--- a/templates/views/userProfile.hbs
+++ b/templates/views/userProfile.hbs
@@ -12,7 +12,7 @@
 
     <h1 class="section-titles index-para"> {{userProfile.username}}</h1>
 
-    <div class="internshipContainer" style="width=90% !importnant">
+    <div class="internshipContainer" style="width=90% !important">
 
         <h1 class="section-subtitles"> About Information </h1>
 
